--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <div class="box">
                 <b>Research or Internship Experience</b>
-                <p>The experience I got is on work immersion. As a TVL-ICT student, we were asked to make a short animated video.</p>
+                <p>The experiences I've learned on work immersion, is that as a TVL-ICT student, we we're asked to make a short animated video.</p>
             </div>
 
             <div class="box">
