--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             <div class="box">
                 <b>Career Goals</b>
-                <p>My goal is to graduate and become a website developer, someday I want to be a wealthy man that can help</p>
+                <p>My goal is to graduate college and one day I want to become a website developer. But someday I want to be a wealthy man that can help people who's in need.</p>
             </div>
 
             <div class="box">
