--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 
             <div class="box">
                 <p>Connect with me on <a href="https://www.linkedin.com/in/john-clarence-mararac-0b54482a9/">LinkedIn</a></p>
+                <p>mararacjohnclarence@gmail.com</p>
             </div>
 
         </section>
