--- a/index.html
+++ b/index.html
@@ -119,9 +119,14 @@
 
             <div class="box">
                 <b>ACADEMIC BACKGROUND</b>
+                <b>Elementary</b>
                 <p>Graduated at Likha Molino Elementary School</p>
+                <b>High School</b>
                 <p>Graduated at Cavite Bacoor National High School</p>
+                <b>Senior High School</b>
                 <p>Graduated at University of Perpetual Help System Dalta - SHS</p>
+                <b>College</b>
+                <P>Currently Taking BSIT-GD at UPHSD-Molino</P>
             </div>
 
             <div class="box">
@@ -138,15 +143,24 @@
 
             <div class="box">
                 <b>Research or Internship Experience</b>
-                <p>The experiences I've learned on work immersion, is that as a TVL-ICT student, we we're asked to make a short animated video.</p>
+                <p>The experience I got is on work immersion. As a TVL-ICT student, we were asked to make a short animated video.</p>
+            </div>
+
+            <div class="box">
+                <b>Skills And Competencies</b>
+                <p>Communication</p>
+                <p>Teamwork</p>
+                <p>Computer Skills</p>
+                <p>Adaptability</p>
             </div>
 
             <div class="box">
                 <b>Career Goals</b>
-                <p>My goal is to graduate college and one day I want to become a website developer. But someday I want to be a wealthy man that can help people who's in need.</p>
+                <p>My goal is to graduate and become a website developer, someday I want to be a wealthy man that can help</p>
             </div>
 
             <div class="box">
+                <b>QUOTES</b>
                 <b>"Education is the passport to the future, for tomorrow belongs to those who prepare for it today"</b>
             </div>
 
