--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
             <div class="box">
                 <b>Career Goals</b>
-                <p>My goal is to graduate and become a website developer, someday I want to be a wealthy man that can help</p>
+                <p>My goal is to graduate and become a website developer, someday I want to be a wealthy man that can help.</p>
             </div>
 
             <div class="box">
