--- a/index.html
+++ b/index.html
@@ -136,22 +136,22 @@
 
             <div class="box">
                 <b>Extracurricular Activities</b>
-                <p>Joined TVL Week - Champion of Call of Duty</p>
-                <p>Joined University Week - Mobile Legends Champion</p>
-                <p>Participated in I.T Olympics E-games</p>
+                <p>• Joined TVL Week - Champion of Call of Duty</p>
+                <p>• Joined University Week - Mobile Legends Champion</p>
+                <p>• Participated in I.T Olympics E-games</p>
             </div>
 
             <div class="box">
-                <b>Research or Internship Experience</b>
+                <b>Internship Experience</b>
                 <p>The experience I got is on work immersion. As a TVL-ICT student, we were asked to make a short animated video.</p>
             </div>
 
             <div class="box">
-                <b>Skills And Competencies</b>
-                <p>Communication</p>
-                <p>Teamwork</p>
-                <p>Computer Skills</p>
-                <p>Adaptability</p>
+                <b>• Skills And Competencies</b>
+                <p>• Communication</p>
+                <p>• Teamwork</p>
+                <p>• Computer Skills</p>
+                <p>• Adaptability</p>
             </div>
 
             <div class="box">
