--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
 
             <div class="box">
-                <b>• Skills And Competencies</b>
+                <b>Skills And Competencies</b>
                 <p>• Communication</p>
                 <p>• Teamwork</p>
                 <p>• Computer Skills</p>
