--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <main>
         <section class="bio">
-            <h2 >John Clarence Mararac</h2>
+            <h2 >NIGGAc</h2>
             <img alt="John Clarence Mararac" src="https://scontent.fmnl17-5.fna.fbcdn.net/v/t1.15752-9/395854987_859391065597925_647781892306874100_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8cd0a2&_nc_eui2=AeGe1tpgUbh_7ZSW5zlRbWP3ochb99GnSdChyFv30adJ0K5LYmff0umOlEV1jgq7b3Sf32E7UxqU_155whZFzizK&_nc_ohc=ywXbcir2Rx0AX_pcJwq&_nc_ht=scontent.fmnl17-5.fna&oh=03_AdTNcRiCXyeGZ4EeIPG-Z9TcLP1tSkW1ASH7eITPMVQnpw&oe=65C860B9" width="125" height="125">
             <p> Hello there, I am currently taking BSIT-GD at University of Perpetual Help System Dalta-Molino. This is my First Year as BSIT-GD.</p>
             <address>Blk 13 Lot 29 Jacinto St. Georgetown Heights Molino IV - mararacjohnclarence@gmail.com</address>
