--- a/index.html
+++ b/index.html
@@ -136,27 +136,27 @@
 
             <div class="box">
                 <b>Extracurricular Activities</b>
-                <p>• Joined TVL Week - Champion of Call of Duty</p>
-                <p>• Joined University Week - Mobile Legends Champion</p>
-                <p>• Participated in I.T Olympics E-games</p>
+                <p>Joined TVL Week - Champion of Call of Duty</p>
+                <p>Joined University Week - Mobile Legends Champion</p>
+                <p>Participated in I.T Olympics E-games</p>
             </div>
 
             <div class="box">
-                <b>Internship Experience</b>
+                <b>Research or Internship Experience</b>
                 <p>The experience I got is on work immersion. As a TVL-ICT student, we were asked to make a short animated video.</p>
             </div>
 
             <div class="box">
                 <b>Skills And Competencies</b>
-                <p>• Communication</p>
-                <p>• Teamwork</p>
-                <p>• Computer Skills</p>
-                <p>• Adaptability</p>
+                <p>Communication</p>
+                <p>Teamwork</p>
+                <p>Computer Skills</p>
+                <p>Adaptability</p>
             </div>
 
             <div class="box">
                 <b>Career Goals</b>
-                <p>My goal is to graduate and become a website developer, someday I want to be a wealthy man that can help.</p>
+                <p>My goal is to graduate and become a website developer, someday I want to be a wealthy man that can help</p>
             </div>
 
             <div class="box">
@@ -165,8 +165,16 @@
             </div>
 
             <div class="box">
-                <p>Connect with me on <a href="https://www.linkedin.com/in/john-clarence-mararac-0b54482a9/">LinkedIn</a></p>
-                <p>mararacjohnclarence@gmail.com</p>
+                <b>Portfolio Showcase</b>
+                <img src="https://scontent.fmnl17-4.fna.fbcdn.net/v/t1.15752-9/416215127_362378053158100_5266687807335329485_n.png?_nc_cat=104&ccb=1-7&_nc_sid=8cd0a2&_nc_eui2=AeGsc-cz8IUIZ_lQLe5B5OYde0GMGwk7xsV7QYwbCTvGxX511-bU1SBtzPTt2MfHV9BhyuDKhSNeIOnceDBo6Oju&_nc_ohc=hWB4QdQCGycAX8AkyZu&_nc_ht=scontent.fmnl17-4.fna&oh=03_AdR_Z-Wdm1mb8MEmn80hrs7drwWgqcJBCzB95LB6HkMIfw&oe=65CC4FEC" alt="showcase" width="600" height="285">
+                <b>"Introducing Gayle, our captivating short animated video crafted during our grade 12 work immersion. Within a tight two-week timeframe, we brought this imaginative project to life.</b>
+            </div>
+
+            <div class="box">
+                <b>Contact Information</b>
+                <p>Connect with me on <a href="https://www.linkedin.com/in/john-clarence-mararac-0b54482a9/">LinkedIn!</a></p>
+                <p>Email : johnclarence.mararac@perpetual.edu.ph</p>
+                <p>Mobile No : +639473575520</p>
             </div>
 
         </section>
