--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
 
             <div class="box">
-                <b>Research or Internship Experience</b>
+                <b>Internship Experience</b>
                 <p>The experience I got is on work immersion. As a TVL-ICT student, we were asked to make a short animated video.</p>
             </div>
 
